# opencv-screen-detector

./: .gitattributes  .gitignore  LIGHTGBM_MODEL.md  README-inference.md  README-trainer.md  README.md  main.py  pyproject.toml
config/: rules.json
data/model/: screen_detector.pkl
inference/: batch_detect.py  config.py  fft_service.py  fft_transform.py  image_index.py  log.py  model_loader.py  predictor.py  preprocess.py  scheduler.py
inference/api/: app.py  predictor.py  router.py  schema.py  utils.py
inference/models/: stage1_natural_vs_screenlike.onnx  stage1_natural_vs_screenshot.onnx  stage2_screenlike_vs_screenphoto.onnx  stage2_screenshot_vs_screenphoto.onnx
shared/: fft_transform.py
src/: __init__.py  detector.py  main.py  pipeline.py  preprocess.py
src/api/: detect.py
src/feature/: __init__.py  artifact.py  banding.py  blackscreen.py  chroma.py  color_noise.py  display_content.py  format_score.py  frequency.py  illumination.py  moire.py  overexposed.py  perspective.py  rectangle.py  reflection.py  sensor_noise.py  softness.py  subpixel_fringing.py
src/ml/: __init__.py  predict.py  train.py
src/scoring/: __init__.py  ml_model.py  rules.py
src/stage1/: __init__.py  screen_classifier.py  ui_detector.py
src/stage2/: __init__.py  cfa_artifact.py  jpeg_fingerprint.py  moire.py  perspective.py  reflection.py  rolling_shutter.py  sensor_noise.py  subpixel.py
src/utils/: __init__.py  image_io.py  image_metadata.py  json_export.py
test/: test_accuracy.py  test_batch_detect.py  test_detector_and_output.py  test_image_io.py  test_input_samples.py  test_parameter_optimization.py  test_performance.py  test_preprocess_and_features.py
tests/: conftest.py  test_accuracy.py  test_api.py  test_classify_extracted.py  test_dataset.py  test_fft_transform.py  test_package.py  test_predictor.py
trainer/: __init__.py  __main__.py  augment.py  cnn_validate.py  config.py  dataset.py  export_onnx.py  fft_branch.py  hard_negative_mining.py  losses.py  model.py  train.py  validate.py
trainer_vit/: README.md  main.py  pyproject.toml
trainer_vit/src/: __init__.py  dataset.py  export_onnx.py  model.py  train.py  transforms.py  validate.py
