[project]
name = "opencv-screen-detector"
version = "0.1.0"
description = "Screen photo detector based on Python and OpenCV"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "opencv-python>=4.10.0",
    "numpy>=2.0.0",
    "scikit-image>=0.25.0",
    "scikit-learn>=1.6.0",
    "pillow>=11.0.0",
    "tqdm>=4.67.0",
    "joblib>=1.4.0",
    "requests>=2.33.1",
    "pytest>=9.0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "black>=25.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
