[project]
name = "opencv-screen-detector"
version = "0.1.0"
description = "Screen photo detector based on Python and OpenCV"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "opencv-python-headless>=4.10.0",
    "numpy>=2.0.0",
    "pillow>=11.0.0",
    "pytest>=9.0.3",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.4.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "black>=25.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
