[project]
name = "opencv-screen-detector"
version = "2.0.0"
description = "Screen photo detector based on Python, OpenCV, and CNN"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Core
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    # API
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "fleep>=1.0.1",
    "python-multipart>=0.0.6",
    # V2 dependencies
    "onnxruntime>=1.16.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pytest>=7.0.0",
    "scikit-learn-stubs>=0.0.3",
]
train = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "albumentations>=1.3.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "onnx>=1.14.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["inference"]

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "basic"
ignore = [ ".venv" ]
disableBytesTypePromotions = true
