[project]
name = "trainer-vit"
version = "1.0.0"
description = "ViT training pipeline for screen detector comparison experiment"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Core
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "albumentations>=1.3.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "onnx>=1.14.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
